@@ -1,3 +1,5 @@
+2005/9/17 -- released version 20050917_trunk
+
 2005/9/16 -- released version 20050916_trunk
 
 2005/9/15 -- released version 20050915_trunk
